create global styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #111111;
+  color: #ffffff;
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    /* padding: 0 5rem; */
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    padding: 0 10rem;
+  }
+}
