--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,7 +1,7 @@
 .container__articles {
   display: flex;
   flex-direction: column;
-  padding: 0 3rem;
+  /* padding: 0 3rem; */
 }
 
 .articles__main {
