--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,25 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+  <div class="menu-bar__icon">
+    <div class="circle">WL</div>
+    <div class="menu-bar__desktop">
+      <ul>
+        <li>LINKEDIN</li>
+        <li>GITHUB</li>
+        <li>CONTATO</li>
+      </ul>
+    </div>
+  </div>
+  <div class="menu-bar__links">
+    <div class="menu-bar__mobile">
+      <span>-</span>
+      <span>-</span>
+      <span>-</span>
+    </div>
+    <div class="menu-bar__desktop">
+      <ul>
+        <img src="https://cdn-icons-png.flaticon.com/128/2111/2111463.png" alt="Instagram" width="26px">
+        <img src="https://cdn-icons-png.flaticon.com/128/3938/3938028.png" alt="Twitter" width="26px">
+      </ul>
+    </div>
+  </div>
+</div>
