--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,7 +1,13 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .container__articles {
   display: flex;
   flex-direction: column;
-  /* padding: 0 3rem; */
+  margin-top: 1rem;
 }
 
 .articles__main {
