--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,14 @@
-<app-menu-title></app-menu-title>
-<div class="container__articles">
-  <div class="articles__main">
-    <app-big-card></app-big-card>
-  </div>
-  <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+<div class="container">
+  <app-menu-bar></app-menu-bar>
+  <app-menu-title></app-menu-title>
+  <div class="container__articles">
+    <div class="articles__main">
+      <app-big-card></app-big-card>
+    </div>
+    <div class="articles__others">
+      <app-small-card></app-small-card>
+      <app-small-card></app-small-card>
+      <app-small-card></app-small-card>
+    </div>
   </div>
 </div>
