--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -13,7 +13,7 @@
   <div class="big-card__description">
     <a href="#">
       <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de
-        impressos.Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos.</p>
+        impressos.Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos</p>
     </a>
   </div>
   <hr>
